services/nginx+LB+remote_state+templatefile/load_balancing_&_stuff....tf
## certzz

#resource "tls_private_key" "tls00" {
#  algorithm = "RSA"
#  ## Security Notice
#  ## The private key generated by this resource will be stored unencrypted in your Terraform state file. Use of this resource for production deployments is not recommended. Instead, generate a private key file outside of Terraform and distribute it securely to the system where Terraform will be run.
#}

#resource "tls_self_signed_cert" "tls_self_signed_cert00" {
#  key_algorithm   = "RSA"
#  private_key_pem = tls_private_key.tls00

#  subject {
#    common_name  = "acucaraccia.com"
#    organization = "Pula Mea Dot Com"
#  }
#
#  validity_period_hours = 12
#
#  allowed_uses = ["key_encipherment", "digital_signature", "server_auth" ]
#
#}


resource "aws_acm_certificate" "acm_certificate00" {
  # 1st example
  #domain_name       = "example.sex"
  #validation_method = "DNS"

  # 2nd example
#  private_key      = tls_private_key.tls00.private_key_pem # priv
  private_key      = var.private_key
##  certificate_body = tls_self_signed_cert.tls_self_signed_cert00.cert_pem # pub
  certificate_body = var.public_certificate
}

# https://chatgpt.com/c/69500858-a28c-832d-9431-04f827395d02
# - cica sa il folosesti doar sa adaugi un al 2lea certificate ....... - aws_acm_certificate.secondary.arn ...
#resource "aws_lb_listener_certificate" "lb_certificate00" {
#  listener_arn    = aws_lb_listener.listener00.arn
#  certificate_arn = aws_acm_certificate.acm_certificate00.arn
#}

###########################################################################

## LB resources


data "aws_subnets" "public_subnetz" {
  filter {
    name   = "vpc-id"
    values = [ var.vpc_id ]
  }

  filter {
    name   = "tag:Name"
    values = [ "public*" ]
  }
}

output "public_subnetz" {
  value = data.aws_subnets.public_subnetz
}

output "public_subnetz_ids" {
  value = data.aws_subnets.public_subnetz.ids
}



##################################################################################################

### DECI CALCULEAZA "data." inainte de "resource" , si deaia a mers cand l-am updatat din merss ###
### dar de la capat nu avem vreo resursa pre-existenta    

#data "aws_subnet" "public_subnet_all" {
#  for_each = toset (data.aws_subnets.public_subnetz.ids)
#  id       = each.value
#}

#output "public_subnet_all" {
#  value = [ for s in data.aws_subnet.public_subnet_all : s.cidr_block ]
#}

##################################################################################################

resource "aws_lb" "lb00" {
  name               = var.lb00_name
  internal           = false
  load_balancer_type = "application"
  security_groups    = [ aws_security_group.sg00.id ]
  ## It needs public subnets in all 3 zones so it can communicate with privsubnets from there ...
  subnets            = [ var.aws_subnet__publicsubnet00a__id, var.aws_subnet__publicsubnet00b__id, var.aws_subnet__publicsubnet00c__id ]
#  ===  
  # subnets            = data.aws_subnets.public_subnetz.ids - nu grigore decat daca "resources" representing "data." a fost deja creatt


#  access_logs {
#    bucket  = aws_s3_bucket.lb_logs.id
#    prefix  = "lb00"
#    enabled = true
#  }
}




resource "aws_lb_target_group" "lb_target_group00" {
  name     = var.lb_target_group00_name
  port     = var.http_port
  protocol = "HTTP"
  vpc_id   = var.vpc_id

#  target_type = "ip/instance/lambda/alb"

  target_group_health {
    dns_failover {
      minimum_healthy_targets_count      = 1
      minimum_healthy_targets_percentage = "off"
    }

    unhealthy_state_routing {
      minimum_healthy_targets_count      = 1
      minimum_healthy_targets_percentage = "off"
    }
  }

  health_check {
    path                = "/"
    protocol            = "HTTP"
    matcher             = "200"
    interval            = 15
    timeout             = 3
    healthy_threshold   = 2
    unhealthy_threshold = 2
  }

}



#resource "aws_lb_target_group_attachment" "pizda" {
#  target_group_arn = aws_lb_target_group.rahatt.arn
#  target_id        = aws_instance.sex.id
#  port             = 80
#}




resource "aws_lb_listener" "listener00" {
  load_balancer_arn = aws_lb.lb00.arn
  port              = var.https_port
  protocol          = "HTTPS"
  ssl_policy        = "ELBSecurityPolicy-2016-08"

  # https://chatgpt.com/c/69500858-a28c-832d-9431-04f827395d02
#  certificate_arn   = aws_lb_listener_certificate.lb_certificate00.arn
  certificate_arn = aws_acm_certificate.acm_certificate00.arn


  default_action {
    type             = "fixed-response"

    fixed_response {
      content_type = "text/plain"
      message_body = "404: page not found. Please try www.acucaraccia.com <br>\n"
      status_code  = 404
    }

  }

#    target_group_arn = aws_lb_target_group.lb_target_group00.arn
}


resource "aws_lb_listener_rule" "acucaraccia_pattern" {
  listener_arn = aws_lb_listener.listener00.arn
  priority     = 100

  action {
    type             = "forward"
    target_group_arn = aws_lb_target_group.lb_target_group00.arn
  }

  condition {
    path_pattern {
      values = [ "/acucaraccia/", "/acucaraccia" ]
    }
  }
}

resource "aws_lb_listener_rule" "acucaraccia_host" {
  listener_arn = aws_lb_listener.listener00.arn
  priority     = 101

  action {
    type             = "forward"
    target_group_arn = aws_lb_target_group.lb_target_group00.arn
  }

  condition {
    host_header {
      values = [ "www.acucaraccia.com" , "acucaraccia.com" ]
    }
  }
}
